[gd_scene load_steps=4 format=3 uid="uid://dwvpq7myxuqot"]

[ext_resource type="Script" path="res://scripts/in_game_ui.gd" id="1_bl5la"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_p6xuk"]
bg_color = Color(0.557805, 0.351065, 0.234962, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ahyve"]
content_margin_top = 5.0

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_bl5la")

[node name="EndPanel" type="PanelContainer" parent="."]
visible = false
custom_minimum_size = Vector2(200, 240)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_p6xuk")

[node name="LevelCompleted" type="Label" parent="EndPanel"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxEmpty_ahyve")
text = "Level completed!"

[node name="ScoreGrid" type="VBoxContainer" parent="EndPanel"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 15

[node name="HitsLabel" type="Label" parent="EndPanel/ScoreGrid"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/outline_size = 2
text = "Hits: X"

[node name="ScoreLabel" type="Label" parent="EndPanel/ScoreGrid"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/outline_size = 2
text = "Score: Y"

[node name="TimeLabel" type="Label" parent="EndPanel/ScoreGrid"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/outline_size = 2
text = "Time: Z"

[node name="FullRunLabel" type="Label" parent="EndPanel/ScoreGrid"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/outline_size = 2
text = "Run: 00:00:00.00"

[node name="Guide" type="Label" parent="EndPanel"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_constants/outline_size = 2
text = "Press 'Click' to continue"
